[build-system]
requires = ["uv-build"]
build-backend = "uv_build"

[project]
name = "square_common_bl"
version = "5.0.9"
description = "common business layer for my personal server."
readme = "README.md"
readme-content-type = "text/markdown"
requires-python = ">=3.12"
license = { text = "GPLv3" }
authors = [
    { name = "Parth Mukesh Mangtani", email = "thepmsquare@gmail.com" },
]
urls = { homepage = "https://github.com/thepmsquare/square_common_bl" }
keywords = ["business", "fastapi", "utilities"]
dependencies = [
    "uvicorn>=0.24.0.post1",
    "fastapi>=0.104.1",
    "pydantic>=2.5.3",
    "requests>=2.32.3",
    "httpx>=0.27.2",
    "square_commons>=2.1.0",
    "square_logger>=3.0.0",
    "square_database_helper>=2.0.0",
    "square_database_structure>=1.0.0",
    "square_authentication_helper>=2.5.2",
    "square_file_store_helper>=3.0.0",
    "python-multipart>=0.0.16",
]
optional-dependencies = { all = ["pytest>=8.3.3"], dev = ["pytest>=8.3.3"] }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Utilities",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Framework :: FastAPI"
]

[tool.uv.build-backend]
module-name = "square_common_bl"
module-root = ""
source-include = ["square_common_bl/data/*"]